# midd4vcc

./: CMakeLists.txt  README.md
middleware/distribution/: midd4vc_client.c  midd4vc_client.h  midd4vc_job_codec.c  midd4vc_protocol.h
middleware/services/: midd4vc_scheduler.c  midd4vc_scheduler.h  midd4vc_server.c
middleware/specifics/: job_catalog.c  job_catalog.h
